# vigilant-pr

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.cursor/skills/vigilant-pr/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-image.yml  release.yml
assets/: README.md
docs/: RELEASING.md
docs/plans/: host-provider_spec.md  voice-personalization_spec.md
docs/site/: index.html  site.webmanifest
src/vigilant/: __init__.py  cli.py  onboarding.py  store.py  ui.py
src/vigilant/engine/: __init__.py  config.py  errors.py  hosts.py  identity.py  providers.py  review.py  util.py  watcher.py
src/vigilant/triggers/: __init__.py  core.py  slack.py  slack_auth.py  slack_client.py  slack_poll.py  teams.py
tests/: test_cli_version.py  test_engine.py  test_env_and_preflight.py  test_gateway.py  test_hosts.py  test_license_headers.py  test_model_commands.py  test_onboarding.py  test_providers.py  test_slack_auth.py  test_slack_poll.py  test_slack_poll_threads.py  test_store.py  test_triggers.py  test_ui.py  test_watcher.py
