[project]
name = "vigilant-pr"
version = "0.1.0"
description = "Vigilant PR - a portable, workflow-agnostic AI PR reviewer that posts on behalf of you."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LongIntel", email = "hello@longintel.co" }]
keywords = ["pull-request", "code-review", "ai", "github", "cli"]
# Core engine is intentionally dependency-free (stdlib only). Runtime needs the
# `gh` CLI on PATH and an ANTHROPIC_API_KEY in the environment.
dependencies = []

[project.optional-dependencies]
# Chat triggers. Slack Socket Mode needs slack_bolt; the Teams webhook is
# stdlib-only, so `slack` is the only third-party trigger dependency.
slack = ["slack_bolt>=1.18"]
chat = ["slack_bolt>=1.18"]
# Automatic Slack token extraction/refresh for `slack-watch --auto-token`.
# Reads your logged-in Chrome Slack session; needs a one-time
# `python -m playwright install chromium`.
slack-refresh = ["playwright>=1.40"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "slack_bolt>=1.18"]

[project.scripts]
vigilant = "vigilant.cli:main"
vpr = "vigilant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigilant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long lines are almost entirely intentional prompt strings; the formatter
# governs real code width.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

# slack_bolt ships no type stubs; the Slack adapter is a thin optional
# integration whose handlers are registered via slack_bolt's untyped decorators.
[[tool.mypy.overrides]]
module = "slack_bolt.*"
ignore_missing_imports = true

# Playwright is an optional extra (slack-refresh) and is imported lazily.
[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vigilant.triggers.slack"
disable_error_code = ["untyped-decorator"]
