[project]
name = "vigilant-pr"
version = "1.7.0"
description = "Vigilant PR - a portable, workflow-agnostic AI PR reviewer that posts on behalf of you."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Timothy Long" }]
keywords = ["pull-request", "code-review", "ai", "github", "cli"]
# Core engine is intentionally dependency-free (stdlib only). Runtime needs the
# `gh` CLI on PATH and an ANTHROPIC_API_KEY in the environment.
dependencies = []

[project.optional-dependencies]
# Automatic Slack token extraction/refresh for `slack-watch --auto-token`.
# Reads your logged-in Chrome Slack session; needs a one-time
# `python -m playwright install chromium`. The Slack monitor and Teams webhook
# are otherwise stdlib-only - no third-party SDK required.
slack-refresh = ["playwright>=1.40"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
vigilant = "vigilant.cli:main"
vpr = "vigilant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigilant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long lines are almost entirely intentional prompt strings; the formatter
# governs real code width.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

# Playwright is an optional extra (slack-refresh) and is imported lazily.
[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true
